# claude-interceptor

./: .gitignore  Cargo.toml  README.org
interceptor-core/: Cargo.toml
interceptor-core/src/: lib.rs  policy.rs  record.rs  schema.rs
interceptor-hook/: Cargo.toml
interceptor-hook/src/: main.rs  translate.rs
interceptor-server/: Cargo.toml
interceptor-server/src/: main.rs  server.rs  tui.rs
policies/: dummy.rego
