[package]
name = "interceptor-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interceptor-server"
path = "src/main.rs"

[dependencies]
interceptor-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
time = { version = "0.3", features = ["formatting", "macros"] }
